external-crates/move/crates/move-package-alt/tests/data/invalid_identifier_package_name/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/invalid_identifier_package_name/Move.toml"`
  ┌─ "tests/data/invalid_identifier_package_name/Move.toml":2:8
  │
2 │ name = "®´∑œ"
  │        ^^^^^^
  │
  = Invalid identifier '®´∑œ'
